# lulu-daily-workflow-scripts

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build-windows-exe.yml  publish-package.yml
src/core/: config.py  holiday_service.py  models.py
src/dal/: reader.py
src/presentation/: excel_generator.py
