[tool.poetry]
name = "luludeprofilescript"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
pydantic = "^2.0.0"
chinesecalendar = "^1.11.0"
holidays = "^0.92"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
